# audion-app

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  intro.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-docker.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: Albums.svelte  Artists.svelte  ConfirmModal.svelte  Connection.svelte  Dashboard.svelte  GettingStarted.svelte  Library.svelte  Liked.svelte  Login.svelte  Playlists.svelte  Settings.svelte  Upload.svelte
frontend/src/stores/: uploadQueue.ts
src/: config.rs  main.rs  state.rs  storage.rs  tunnel.rs
src/api/: albums.rs  artists.rs  auth.rs  events.rs  library.rs  liked.rs  mod.rs  playlists.rs  search.rs  storage_settings.rs  stream.rs  subsonic.rs  tracks.rs  tunnel.rs  users.rs
src/api/tracks/: lyrics.rs  metadata.rs  mod.rs  query.rs  upload.rs
src/auth/: middleware.rs  mod.rs
src/db/: mod.rs  schema.rs
src/events/: mod.rs
src/scanner/: metadata.rs  mod.rs  watcher.rs
