[package]
name = "audion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart", "macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5.3"
lofty = "0.22.4"
metaflac = "0.2.8"
tokio-stream = { version = "0.1.15", features = ["sync"] }
mime_guess = "2.0.4"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0"
tokio-util = { version = "0.7.12", features = ["io"] }
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
md5 = "0.7.0"
notify = "6.1.1"
hex = "0.4.3"


